@@ -46,3 +46,37 @@ index     pdgcode   ekin[MeV]       x[cm]       y[cm]       z[cm]          ux   
     5        2112         0.1           1           2           3           0           0           1        0.01           2
     6        2112           0           0           0           0           0           0           1           0           3
     7        2112         0.1           1           2           3           0           0           1        0.01           3
+Opened MCPL file foobar.mcpl.gz:
+
+  Basic info
+    Format             : MCPL-3
+    No. of particles   : 8
+    Header storage     : 147 bytes
+    Data storage       : 256 bytes
+
+  Custom meta data
+    Source             : "CustomMPITest"
+    Number of comments : 3
+          -> comment 0 : "Some comment."
+          -> comment 1 : "Another comment."
+          -> comment 2 : "stat:sum:foostat:                      46"
+    Number of blobs    : 0
+
+  Particle data format
+    User flags         : no
+    Polarisation info  : no
+    Fixed part. type   : yes (pdgcode 2112)
+    Fixed part. weight : no
+    FP precision       : single
+    Endianness         : little
+    Storage            : 32 bytes/particle
+
+index     pdgcode   ekin[MeV]       x[cm]       y[cm]       z[cm]          ux          uy          uz    time[ms]      weight
+    0        2112           0           0           0           0           0           0           1           0           0
+    1        2112         0.1           1           2           3           0           0           1        0.01           0
+    2        2112           0           0           0           0           0           0           1           0           1
+    3        2112         0.1           1           2           3           0           0           1        0.01           1
+    4        2112           0           0           0           0           0           0           1           0           2
+    5        2112         0.1           1           2           3           0           0           1        0.01           2
+    6        2112           0           0           0           0           0           0           1           0           3
+    7        2112         0.1           1           2           3           0           0           1        0.01           3
